# OSSGameForge

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  coverage.xml  coverage_error.md  docker-compose.yml  mypy_error.md  pyproject.toml  pytest-report.xml  ruffbugs.md  run_demo.ps1  run_demo.sh  run_tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt  setup.py
backend/alembic/: README  env.py
backend/app/: config.py  database.py  main.py  storage.py
backend/app/golden_samples/: sample_asset_intensive.json  sample_complex_structure.json  sample_minimal_empty.json  sample_simple_geometry.json  sample_single_entity.json
backend/app/routers/: __init__.py  assets.py  export.py  generation.py  health.py  projects.py
backend/app/schemas/: __init__.py  asset.py  export.py  generation.py  project.py
backend/app/services/: __init__.py  asset_service.py  context_builder.py  inference_client.py  postprocessor.py
backend/scripts/: init_migrations.sh  test_database.py  verify_task_2.1.py
backend/tests/: conftest.py  test_simple.py
backend/tests/backend/: run_all_tests.py  test_health.py  test_routers.py  test_schemas.py  test_services.py  test_simple_imports.py
backend/tests/backend/integration/: test_api_integration.py
backend/tests/backend/unit/: test_config.py  test_database.py  test_main.py
devops/docker/: postgres-init.sql
devops/mocks/: mock_data.json
docs/: task1_3_review_summary.md  task2.1_summary.md  testing.md
docs/api_contracts/: v1.yaml
frontend/: .gitignore
tasks/: task1.1.md  task1.2.md  task1.3.md  task2.1.md  task2.2.md  task2.3.md  task3.1&3.2.md  task3.3.md  task4.1.md  task4.2.md  task4.3.md  task4.4.md  task5.1.md  task5.2.md  task5.3.md
tests/: conftest.py  test_core_generation.py  test_generation_edge_cases.py  test_generation_integration.py  test_generation_pipeline.py  week1_test_summary.py
tests/backend/: run_all_tests.py  test_preprocessing_pipeline.py  test_routers.py  test_schemas.py  test_services.py  test_simple_imports.py  test_task1_3_review.py
